<resources>
    <string name="app_name">Chatter</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="no_account_register_here">No account? Register here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="display_name">Display Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="already_registered_log_in">Already Registered? Log In</string>
    <string name="select_user">Create a chat with...</string>
    <string name="type_a_message">Type a message...</string>
    <string name="search_a_contact">Search a contact...</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="save">Save</string>
    <string name="online">Online</string>
    <string name="server_address_hint">Server Address</string>
    <string name="example_http_192_168_1_46_5000">Example: http://192.168.1.46:5000/</string>
    <string name="contact_name">Contact name</string>
    <string name="Add" />
    <string name="add_chat">Add Chat</string>
    <string name="contact_username">Contact username</string>

</resources>